fix spacing issues with expanded view. force line breaks on long links in expanded view

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,13 @@ a:active, a:hover {
 
 .app-grid-expanded{
     display: grid; grid-template-columns:49.5% 49.5%; border-left: 1px solid #AAA; border-right: 1px solid #AAA;
-    grid-template-rows:auto auto auto auto auto auto auto auto; row-gap: 12px; column-gap: 5px;
+    grid-template-rows:auto auto auto auto auto auto auto auto; row-gap: 0px; column-gap: 5px;
+    font-size: 14px;
+    overflow-wrap: break-word;
+}
+.app-grid-expanded > div{
+    padding-right: 8px;
+    padding-top: 0px;
 }
 
 .app-inputs {
